# arcanum

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  write.sh
arcanum/: create_file.py  edit_mkdocs_yml.py
